--- a/css/bootStyle.css
+++ b/css/bootStyle.css
@@ -44,6 +44,68 @@ body{
     color:#fff;
 }
 
+#explore-main-section{
+    min-height: 400px;
+
+}
+
+#explore-main-section .fa{
+    background-color: #333;
+    color:#fff;
+    padding:4px;
+    font-size:30px;
+    border-radius:5px;
+}
+
+#create-head-section{
+    background-color: #1174A7;
+    color:#fff;
+}
+
+#create-main-section{
+    background-color:#333;
+    color:#fff;
+    min-height: 400px;
+
+}
+
+#create-main-section .fa{
+    background-color: #fff;
+    color:#1174A7;
+    padding:4px;
+    font-size:30px;
+    border-radius:5px;
+}
+
+#share-head-section{
+    background-color: #1174A7;
+    color:#fff;
+}
+
+#share-main-section{
+    min-height: 400px;
+
+}
+
+#share-main-section .fa{
+    background-color: #333;
+    color:#fff;
+    padding:4px;
+    font-size:30px;
+    border-radius:5px;
+}
+
+#footer-section{
+    background-color: #333;
+    color:#fff;
+}
+
+
+
+
+
+
+
 @media screen and (max-width:576px){
     #home section h1{
         font-size: 20px !important;
